<resources>
    <string name="app_name">MossiGame Block05</string>
    <string name="button">Button</string>
    <string name="level">Level</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="catches">Catches</string>
    <string name="intro_txt">Welcome to the Mosquito Game! Catch every mosquito by simply tapping it on the screen.</string>
    <string name="HighScoreText">HighScore</string>
    <string name="Save">Save</string>
</resources>
