<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hintergrund"
    android:orientation="vertical"
    tools:context="com.example.sven.m335_mossigame_block05.GameActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top">

        <Button
            android:id="@+id/buttonShowMossi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button" />

        <TextView
            android:id="@+id/txtViewLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/level"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="5dp"
            android:text="@string/score"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/gameZone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="clip_vertical|clip_horizontal"
        android:layout_weight="1"
        android:background="@color/semiTransparentWhite">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top">

            <FrameLayout
                android:id="@+id/bar_time"
                android:layout_width="50dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary">

            </FrameLayout>

            <TextView
                android:id="@+id/textViewTimeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:elevation="1dp"
                android:padding="5dp"
                android:text="@string/time"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <FrameLayout
                android:id="@+id/bar_catches"
                android:layout_width="50dp"
                android:layout_height="15dp"
                android:layout_gravity="center_vertical"
                android:background="@color/colorPrimary">

            </FrameLayout>

            <TextView
                android:id="@+id/textViewCatches"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:gravity="end"
                android:padding="5dp"
                android:text="@string/catches"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </FrameLayout>

    </LinearLayout>

</LinearLayout>
